DevOCL/src/objects/CLQ_Case_Action_Details__c.object
<CustomObject>
    <description>Different Actions that can be taken on a case</description>
    <fields>
        <fullName>CLQ_Alleged_Operation_Action__c</fullName>
        <label>Alleged Operation Action</label>
        <picklist>
            <picklistValues>
                <fullName>Letter sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onsite visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recommendation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Action Details</relationshipLabel>
        <relationshipName>Case_Action_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLQ_Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CLQ_Date_of_Action__c</fullName>
        <label>Date of Action</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_Enforcement_Action__c</fullName>
        <label>Enforcement Action</label>
        <picklist>
            <picklistValues>
                <fullName>Revocation Recommended by County</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revocation Recommended by State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revocation Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspension Recommended by County</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspension Recommended by State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspension Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspension Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enforcement Case Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enforcement Case Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAO Issued Certified Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAO Received by Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAO Mailed Certificate of Mailing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caretaker Letter Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hearing Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hearing Occurred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hearing Decision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AO Issued Certified Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AO Received by Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AO Mailed via Certificate of Mailing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AO Appeal with Stay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AO Appeal without a Stay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cease and Desist Letter Issued</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revoked Date Settlement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voluntary Closure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ODJFS Withdrawal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDJFS Withdrawal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspension Lifted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is used an External ID for Case Action Detail object.</description>
        <externalId>true</externalId>
        <label>External_Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CLQ_Notes_Internal_Use__c</fullName>
        <inlineHelpText>These notes are for internal users only and will not be displayed on portal.</inlineHelpText>
        <label>Notes (Internal Use)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CLQ_Other_Action__c</fullName>
        <description>If other is selected in the action taken, describe what action has been taken.</description>
        <label>Other Action</label>
        <type>TextArea</type>
    </fields>
    <label>Case Action Detail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CAD-{00000000}</displayFormat>
        <label>Case Action Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Action Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>